--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -10,6 +10,7 @@ metadata:
     flux.weave.works/tag.init: regexp:^3.*
     flux.weave.works/tag.podinfod: semver:~1.3
     flux.weave.works/automated: 'true'
+    flux.weave.works/delete: "true"
 spec:
   strategy:
     rollingUpdate:
